named logo better

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <header class="header">
     <div id="menu-btn" class="fas fa-bars"></div>
 
-    <a href="#" class="logo" ><img src="image/Circle Education Badge Logo (2).png" alt="AutoWizard Logo" style="float: right;  padding-left: 10px; padding-bottom: 3px; width: 43px;height:35px;">AutoWizard</a>
+    <a href="#" class="logo" ><img src="image/logo.png" alt="AutoWizard Logo" style="float: right;  padding-left: 10px; padding-bottom: 3px; width: 43px;height:35px;">AutoWizard</a>
 
     <nav class="navbar">
         <a href="#home">home</a>
