--- a/AboutUs.html
+++ b/AboutUs.html
@@ -70,7 +70,7 @@
                     <img src="image/VijayPic.png" alt="">
                     <div class="content">
                         <p><b>Role:</b> Programmer</p>
-                        <p><b>Chapter:</b> Farmington 56-0125</p>
+                        <p><b>Team:</b> Farmington 435-S-01251</p>
                         <p><b>School:</b> Farmington High School</p>
                         <p><b>City:</b> Farmington </p>
                         <p><b>State:</b> Michigan</p>
@@ -83,7 +83,7 @@
                     <img src="image/ShreyasPic_709x805.jpeg" alt="">
                     <div class="content">
                         <p><b>Role:</b> Programmer and Designer</p>
-                        <p><b>Chapter:</b> Farmington 56-0125</p>
+                        <p><b>Team:</b> Farmington 435-S-01251</p>
                         <p><b>School:</b> Farmington High School</p>
                         <p><b>City:</b> Farmington </p>
                         <p><b>State:</b> Michigan</p>
@@ -96,7 +96,7 @@
                     <img src="image/AidenPic.png" alt="">
                     <div class="content">
                         <p><b>Role:</b> Designer</p>
-                        <p><b>Chapter:</b> Farmington 56-0125</p>
+                        <p><b>Team:</b> Farmington 435-S-01251</p>
                         <p><b>School:</b> Farmington High School</p>
                         <p><b>City:</b> Farmington </p>
                         <p><b>State:</b> Michigan</p>
@@ -127,6 +127,7 @@
                <a href="#reviews"> <i class="fas fa-arrow-right"></i> reviews </a>
                <a href="#contact"> <i class="fas fa-arrow-right"></i> contact </a>
                <a href="explore.html"> <i class="fas fa-arrow-right"></i> explore </a>
+               <a href="about-us.html"><i class="fas fa-arrow-right"></i></a>
            </div>
      
            <div class="box">
