--- a/AboutUs.html
+++ b/AboutUs.html
@@ -127,6 +127,7 @@
                <a href="index.html#reviews"> <i class="fas fa-arrow-right"></i> reviews </a>
                <a href="index.html#contact"> <i class="fas fa-arrow-right"></i> contact </a>
                <a href="explore.html"> <i class="fas fa-arrow-right"></i> explore </a>
+               <a href="AboutUs.html"> <i class="fas fa-arrow-right"></i> About Us </a>
            </div>
      
            <div class="box">
