about us scaling

--- a/AboutUs.html
+++ b/AboutUs.html
@@ -92,7 +92,7 @@
                 </div>
     
                 <div class="swiper-slide box">
-                    <span> <b>Aiden Cummins</b></span>
+                    <span id="aidenname"> <b>Aiden Cummins</b></span>
                     <img src="image/AidenPic.png" alt="">
                     <div class="content">
                         <p><b>Role:</b> Designer</p>
