added theme to website (required)

--- a/AboutUs.html
+++ b/AboutUs.html
@@ -60,6 +60,7 @@
     <section class="about-us" id="about-us">
 
         <h1 class="heading"> About Us </h1>
+        <p>Theme: Develope a website for a used car lot.</p>
     
         <div class="swiper about-us-slider">
     
