added hours of operation

--- a/index.html
+++ b/index.html
@@ -330,6 +330,11 @@
 
     <h1 class="heading">contact us</h1>
 
+    <h1 class="heading hoursHeading">Hours Of Operation:</h1>
+
+    <p>Monday to Friday: 9am - 9pm</p>
+    <p>Saturday to Sunday: 7am - 5pm</p>
+
     <div class="row">
 
         <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2492.2740066702377!2d-83.3618275138211!3d42.462688310661335!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8824b116669bce49%3A0x5e70c495594a2405!2s32000%20Shiawassee%20St%2C%20Farmington%2C%20MI%2048336!5e0!3m2!1sen!2sus!4v1667081914522!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
