remove theme from about us page and added to footer

--- a/explore.html
+++ b/explore.html
@@ -439,6 +439,8 @@
 
     </div>
 
+    <div class="credit">Theme:  Develop a website for a used car lot</div>
+
 </section>
 
 <script src="js/filter.js"></script>
