--- a/index.html
+++ b/index.html
@@ -383,6 +383,8 @@
 
     </div>
 
+    <div class="credit">Theme:  Develop a website for a used car lot</div>
+
 </section>
 
 <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
