added surya review (still needs picture)

--- a/index.html
+++ b/index.html
@@ -231,8 +231,8 @@
             <div class="swiper-slide box">
                 <img src="image/pic-1.png" alt="">
                 <div class="content">
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsam incidunt quod praesentium iusto id autem possimus assumenda at ut saepe.</p>
-                    <h3>john deo</h3>
+                    <p>“This dealership helped me pick the car I want! Very nice people and thier website is easy to use!”</p>
+                    <h3>Surya Pugazhendhi</h3>
                     <div class="stars">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
