about us paragraph

--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
         <a href="#reviews">reviews</a>
         <a href="#contact">contact</a>
         <a href='explore.html'>explore</a>
-        <a href='AboutUs.html'>About Us</a>
+        <a href='#ab'>About Us</a>
+        <a href='salesRepresentatives.html'>representatives</a>
     </nav>
 
     <div id="login-btn">
@@ -324,6 +325,16 @@
 
     </div>
 
+</section>
+
+<section class="ab" id="ab">
+    <h1 class="heading">About Us</h1>
+
+    <div class="row">
+        <div class="box content-box">
+            <h1>We are AutoWizard Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel, omnis eos! Enim, non harum! Veniam dicta quam, aut, cupiditate aliquid necessitatibus adipisci quas atque doloremque, dolorum placeat reprehenderit quisquam unde impedit voluptas dignissimos nostrum quos maiores consequuntur. Harum nulla in praesentium, et explicabo tenetur vel distinctio fugit quam placeat nihil.</h1>
+        </div>
+    </div>
 </section>
 
 <section class="contact" id="contact">
