--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@
 
     </div>
 
-    <div class="credit">Theme:  Develop a website for a used car lot</div>
+    <div class="theme">Theme:  Develop a website for a used car lot</div>
 
 </section>
 
