--- a/salesRepresentatives.html
+++ b/salesRepresentatives.html
@@ -60,7 +60,7 @@
 
     <section class="about-us" id="about-us">
 
-        <h1 class="heading"> About Us </h1>
+        <h1 class="heading"> Sales Representatives </h1>
 
         <div class="swiper about-us-slider">
     
