sales rep pages fix

--- a/salesRepresentatives.html
+++ b/salesRepresentatives.html
@@ -70,7 +70,7 @@
                     <span> <b>Vijay Nannapuraju</b></span>
                     <img src="image/creators/VijayPic.png" alt="">
                     <div class="content">
-                        <p><b>Role:</b> Programmer</p>
+                        <p class="firstElement"><b>Role:</b> Programmer</p>
                         <p><b>Team:</b> Farmington 435-S-01251</p>
                         <p><b>School:</b> Farmington High School</p>
                         <p><b>City:</b> Farmington </p>
@@ -83,7 +83,7 @@
                     <span> <b>Shreyas Narayanan</b></span>
                     <img src="image/creators/ShreyasPic.jpeg" alt="">
                     <div class="content">
-                        <p><b>Role:</b> Programmer and Designer</p>
+                        <p class="firstElement"><b>Role:</b> Programmer and Designer</p>
                         <p><b>Team:</b> Farmington 435-S-01251</p>
                         <p><b>School:</b> Farmington High School</p>
                         <p><b>City:</b> Farmington </p>
@@ -96,7 +96,7 @@
                     <span> <b>Aiden Cummins</b></span>
                     <img src="image/creators/AidenPic.png" alt="">
                     <div class="content">
-                        <p><b>Role:</b> Designer</p>
+                        <p class="firstElement"><b>Role:</b> Designer</p>
                         <p><b>Team:</b> Farmington 435-S-01251</p>
                         <p><b>School:</b> Farmington High School</p>
                         <p><b>City:</b> Farmington </p>
