--- a/index.html
+++ b/index.html
@@ -230,10 +230,10 @@
         <div class="swiper-wrapper">
 
             <div class="swiper-slide box">
-                <img src="image/pic-1.png" alt="">
+                <img src="image/profiles/pic-1.png" alt="">
                 <div class="content">
                     <p>“This dealership helped me pick the car I want! Very nice people and thier website is easy to use!”</p>
-                    <h3>Surya Pugazhendhi</h3>
+                    <h3>Alexander Hamilton</h3>
                     <div class="stars">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -245,10 +245,10 @@
             </div>
 
             <div class="swiper-slide box">
-                <img src="image/pic-2.png" alt="">
+                <img src="image/profiles/pic-2.png" alt="">
                 <div class="content">
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsam incidunt quod praesentium iusto id autem possimus assumenda at ut saepe.</p>
-                    <h3>john deo</h3>
+                    <p>"This delaership has provided me my dream car not only at a great price but also in a practically brand new condition."</p>
+                    <h3>Ada Lovelace</h3>
                     <div class="stars">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -260,10 +260,10 @@
             </div>
 
             <div class="swiper-slide box">
-                <img src="image/pic-3.png" alt="">
+                <img src="image/profiles/pic-3.png" alt="">
                 <div class="content">
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsam incidunt quod praesentium iusto id autem possimus assumenda at ut saepe.</p>
-                    <h3>john deo</h3>
+                    <p>"The sales representatives knew what they were doing! I found a perfect car within seconds of contacting them. Not to mention all of thier cars are in prestine condition for being used."</p>
+                    <h3>Alan Turing</h3>
                     <div class="stars">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -275,10 +275,10 @@
             </div>
 
             <div class="swiper-slide box">
-                <img src="image/pic-4.png" alt="">
+                <img src="image/profiles/pic-4.png" alt="">
                 <div class="content">
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsam incidunt quod praesentium iusto id autem possimus assumenda at ut saepe.</p>
-                    <h3>john deo</h3>
+                    <p>"Auto Wizard has a wide varity of cars for sale. I even found the firetruck ive always wanted for a convientient price!"</p>
+                    <h3>Grace Hopper</h3>
                     <div class="stars">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -290,10 +290,10 @@
             </div>
 
             <div class="swiper-slide box">
-                <img src="image/pic-5.png" alt="">
+                <img src="image/profiles/pic-5.png" alt="">
                 <div class="content">
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsam incidunt quod praesentium iusto id autem possimus assumenda at ut saepe.</p>
-                    <h3>john deo</h3>
+                    <p>"Thanks to AutoWizard's great website I was able to easily find a perfect car for me. In additon to how steamlined the webiste is they also have information for each car that helped me find the car I wanted."</p>
+                    <h3>Josh Adams</h3>
                     <div class="stars">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -305,10 +305,10 @@
             </div>
 
             <div class="swiper-slide box">
-                <img src="image/pic-6.png" alt="">
+                <img src="image/profiles/pic-6.png" alt="">
                 <div class="content">
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsam incidunt quod praesentium iusto id autem possimus assumenda at ut saepe.</p>
-                    <h3>john deo</h3>
+                    <p>"Thanks to AutoWizard's newsletter I'm able to be notified of new relases that I may be intrested in for my company. Not to mention the contact form they have lets me quickly contact sales representatives when I need them."</p>
+                    <h3>Hannah Laou</h3>
                     <div class="stars">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
