class name change: ab to aboutUs

--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
 
 </section>
 
-<section class="ab" id="ab">
+<section class="aboutUs" id="aboutUs">
     <h1 class="heading">About Us</h1>
 
     <div class="row">
