about us link on nav bar

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <a href="#reviews">reviews</a>
         <a href="#contact">contact</a>
         <a href='explore.html'>explore</a>
-        <a href='#ab'>About Us</a>
+        <a href='#aboutUs'>About Us</a>
         <a href='salesRepresentatives.html'>representatives</a>
     </nav>
 
