--- a/salesRepresentatives.html
+++ b/salesRepresentatives.html
@@ -27,7 +27,7 @@
             <a href="index.html#reviews">reviews</a>
             <a href="index.html#contact">contact</a>
             <a href='explore.html'>explore</a>
-            <a href='index.html#ab'>About Us</a>
+            <a href='index.html#aboutUs'>About Us</a>
             <a href='salesRepresentatives.html'>Representatives</a>
         </nav>
     
