added representatives page to footer

--- a/index.html
+++ b/index.html
@@ -375,6 +375,7 @@
            <a href="#contact"> <i class="fas fa-arrow-right"></i> contact </a>
            <a href="explore.html"> <i class="fas fa-arrow-right"></i> explore </a>
            <a href="#aboutUs"> <i class="fas fa-arrow-right"></i> About Us </a>
+           <a href="salesRepresentatives.html"> <i class="fas fa-arrow-right"></i> Representatives </a>
        </div>
  
        <div class="box">
