--- a/salesRepresentatives.html
+++ b/salesRepresentatives.html
@@ -129,6 +129,7 @@
                <a href="index.html#contact"> <i class="fas fa-arrow-right"></i> contact </a>
                <a href="explore.html"> <i class="fas fa-arrow-right"></i> explore </a>
                <a href="index.html#aboutUs"> <i class="fas fa-arrow-right"></i> About Us </a>
+               <a href="salesRepresentatives.html"> <i class="fas fa-arrow-right"></i> Representatives </a>
            </div>
      
            <div class="box">
