--- a/explore.html
+++ b/explore.html
@@ -6,16 +6,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <!-- Favicon -->
     <link rel="shortcut icon" type="image/png" href="image/favicon.png">
     
-    <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css" />
+    <!-- Import Stylesheets -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <link rel="stylesheet" href="css/swiper-bundle.min.css">
     <link rel="stylesheet" href="css/style.css">
+
+    <!-- Document Title -->
     <title>Explore</title>
 </head>
 
 <body>
 
+<!-- Navbar -->
 <header class="header">
     <div id="menu-btn" class="fas fa-bars"></div>
 
@@ -36,8 +41,10 @@
     </div>
 </header> 
 
+<!-- Back To Top Button -->
 <button id="backToTopButton" class="backToTopButton" title="Go to top">Top</button>
 
+<!-- Login Form -->
 <div class="login-form-container">
 
     <span id="close-login-form" class="fas fa-times"></span>
@@ -58,6 +65,7 @@
 
 </div>
 
+<!-- Filter selector -->
 <section class="selection" id="selection" style="margin-top: 100px;">
     <div class="row">
         <div id="filters">
@@ -149,6 +157,7 @@
     </div>
 </section>
 
+<!-- Car listings -->
 <section class="listings" id="listings">
 
     <div class="row">
@@ -409,6 +418,7 @@
 
 </section>
 
+<!-- Footer -->
 <section class="footer" id="footer">
 
     <div class="box-container">
@@ -445,10 +455,12 @@
 
 </section>
 
+<!-- Import JavaScript -->
 <script src="js/filter.js"></script>
 <script src="js/script.js"></script>
 <script src="js/backToTop.js"></script>
 
+<!-- In Document Script -->
 <script>
     function carType(id) {
         let green = "#002517";
