unique car info (explore page)

--- a/explore.html
+++ b/explore.html
@@ -165,12 +165,12 @@
         <div class="box column red crossover">
             <img src="image/cars/1.png" alt="">
             <div class="content">
-                <h3>new model</h3>
-                <div class="price"> <span>price : </span> $62,000/- </div>
+                <h3>Kia Sportage</h3>
+                <div class="price"> <span>price : </span> $24,000/- </div>
                 <p>
-                    2021 -
+                    2022 -
                     Automatic -
-                    60k miles
+                    109,280 miles
                 </p>
                 <a href="#" class="btn">check out</a>
             </div>
@@ -179,12 +179,12 @@
         <div class="box column gray car">
             <img src="image/cars/2.png" alt="">
             <div class="content">
-                <h3>new model</h3>
-                <div class="price"> <span>price : </span> $62,000/- </div>
+                <h3>Buick Verano GS</h3>
+                <div class="price"> <span>price : </span> $10,000/- </div>
                 <p>
-                    2021 -
+                    2016 -
                     Automatic -
-                    60k miles
+                    13,510 miles
                 </p>
                 <a href="#" class="btn">check out</a>
             </div>
@@ -193,12 +193,12 @@
         <div class="box column white crossover">
             <img src="image/cars/3.png" alt="">
             <div class="content">
-                <h3>new model</h3>
-                <div class="price"> <span>price : </span> $62,000/- </div>
+                <h3>Chevrolet Equinox Premier</h3>
+                <div class="price"> <span>price : </span> $27,299/- </div>
                 <p>
-                    2021 -
+                    2020 -
                     Automatic -
-                    60k miles
+                    13,000 miles
                 </p>
                 <a href="#" class="btn">check out</a>
             </div>
@@ -207,12 +207,12 @@
         <div class="box column blue convertible">
             <img src="image/cars/4.png" alt="">
             <div class="content">
-                <h3>new model</h3>
-                <div class="price"> <span>price : </span> $62,000/- </div>
+                <h3>Mercedes Benz SL-Class</h3>
+                <div class="price"> <span>price : </span> $23,499/- </div>
                 <p>
-                    2021 -
-                    Automatic -
-                    60k miles
+                    2017 -
+                    Manual -
+                    59,000 miles
                 </p>
                 <a href="#" class="btn">check out</a>
             </div>
@@ -221,12 +221,12 @@
         <div class="box column orange car">
             <img src="image/cars/5.png" alt="">
             <div class="content">
-                <h3>new model</h3>
-                <div class="price"> <span>price : </span> $62,000/- </div>
+                <h3>Ford Focus ST</h3>
+                <div class="price"> <span>price : </span> $15,497/- </div>
                 <p>
-                    2021 -
+                    2017 -
                     Automatic -
-                    60k miles
+                    93,000 miles
                 </p>
                 <a href="#" class="btn">check out</a>
             </div>
@@ -235,12 +235,12 @@
         <div class="box column blue crossover">
             <img src="image/cars/6.png" alt="">
             <div class="content">
-                <h3>new model</h3>
-                <div class="price"> <span>price : </span> $62,000/- </div>
+                <h3>Kia Sportage</h3>
+                <div class="price"> <span>price : </span> $23,909/- </div>
                 <p>
                     2021 -
                     Automatic -
-                    60k miles
+                    20,000 miles
                 </p>
                 <a href="#" class="btn">check out</a>
             </div>
@@ -249,12 +249,12 @@
         <div class="box column white crossover">
             <img src="image/cars/7.png" alt="">
             <div class="content">
-                <h3>new model</h3>
-                <div class="price"> <span>price : </span> $62,000/- </div>
+                <h3>MG HS</h3>
+                <div class="price"> <span>price : </span> $42,990/- </div>
                 <p>
-                    2021 -
+                    2020 -
                     Automatic -
-                    60k miles
+                    11,060 miles
                 </p>
                 <a href="#" class="btn">check out</a>
             </div>
@@ -263,12 +263,12 @@
         <div class="box column gray sportsCar">
             <img src="image/cars/8.png" alt="">
             <div class="content">
-                <h3>new model</h3>
-                <div class="price"> <span>price : </span> $62,000/- </div>
+                <h3>Porsche Panamera</h3>
+                <div class="price"> <span>price : </span> $24,995/- </div>
                 <p>
-                    2021 -
-                    Automatic -
-                    60k miles
+                    2014 -
+                    Manual -
+                    123,478 miles
                 </p>
                 <a href="#" class="btn">check out</a>
             </div>
@@ -277,12 +277,12 @@
         <div class="box column blue crossover">
             <img src="image/cars/9.png" alt="">
             <div class="content">
-                <h3>new model</h3>
+                <h3>Audi e-tron</h3>
                 <div class="price"> <span>price : </span> $62,000/- </div>
                 <p>
-                    2021 -
+                    2019 -
                     Automatic -
-                    60k miles
+                    8,670 miles
                 </p>
                 <a href="#" class="btn">check out</a>
             </div>
@@ -291,12 +291,12 @@
         <div class="box column black sportsCar convertible">
             <img src="image/cars/10.png" alt="">
             <div class="content">
-                <h3>new model</h3>
-                <div class="price"> <span>price : </span> $62,000/- </div>
+                <h3>Porsche Boxster S</h3>
+                <div class="price"> <span>price : </span> $43,590/- </div>
                 <p>
-                    2021 -
-                    Automatic -
-                    60k miles
+                    2014 -
+                    Manual -
+                    31,671 miles
                 </p>
                 <a href="#" class="btn">check out</a>
             </div>
@@ -305,12 +305,12 @@
         <div class="box column blue car">
             <img src="image/cars/11.png" alt="">
             <div class="content">
-                <h3>new model</h3>
-                <div class="price"> <span>price : </span> $62,000/- </div>
+                <h3>Buick Avista</h3>
+                <div class="price"> <span>price : </span> $31,295/- </div>
                 <p>
-                    2021 -
+                    2022 -
                     Automatic -
-                    60k miles
+                    20,910 miles
                 </p>
                 <a href="#" class="btn">check out</a>
             </div>
@@ -319,12 +319,12 @@
         <div class="box column gray crossover">
             <img src="image/cars/12.png" alt="">
             <div class="content">
-                <h3>new model</h3>
-                <div class="price"> <span>price : </span> $62,000/- </div>
+                <h3>Porsche Cayman</h3>
+                <div class="price"> <span>price : </span> $45,000/- </div>
                 <p>
-                    2021 -
-                    Automatic -
-                    60k miles
+                    2015 -
+                    Manual -
+                    19,965 miles
                 </p>
                 <a href="#" class="btn">check out</a>
             </div>
@@ -333,12 +333,12 @@
         <div class="box column black other crossover">
             <img src="image/cars/13.png" alt="">
             <div class="content">
-                <h3>new model</h3>
-                <div class="price"> <span>price : </span> $62,000/- </div>
+                <h3>Ford Interceptor</h3>
+                <div class="price"> <span>price : </span> $17,950/- </div>
                 <p>
-                    2021 -
+                    2017 -
                     Automatic -
-                    60k miles
+                    101,375 miles
                 </p>
                 <a href="#" class="btn">check out</a>
             </div>
@@ -347,12 +347,12 @@
         <div class="box column yellow sportsCar">
             <img src="image/cars/14.png" alt="">
             <div class="content">
-                <h3>new model</h3>
-                <div class="price"> <span>price : </span> $62,000/- </div>
+                <h3>Porsche Cayman</h3>
+                <div class="price"> <span>price : </span> $45,000/- </div>
                 <p>
-                    2021 -
-                    Automatic -
-                    60k miles
+                    2015 -
+                    Manual -
+                    19,965 miles
                 </p>
                 <a href="#" class="btn">check out</a>
             </div>
@@ -361,12 +361,12 @@
         <div class="box column white sportsCar">
             <img src="image/cars/15.png" alt="">
             <div class="content">
-                <h3>new model</h3>
-                <div class="price"> <span>price : </span> $62,000/- </div>
+                <h3>Porsche Panamera</h3>
+                <div class="price"> <span>price : </span> $26,495/- </div>
                 <p>
-                    2021 -
-                    Automatic -
-                    60k miles
+                    2010 -
+                    Manual -
+                    76,588 miles
                 </p>
                 <a href="#" class="btn">check out</a>
             </div>
@@ -375,12 +375,12 @@
         <div class="box column red other truck">
             <img src="image/cars/16.png" alt="">
             <div class="content">
-                <h3>new model</h3>
-                <div class="price"> <span>price : </span> $62,000/- </div>
+                <h3>Firetruck</h3>
+                <div class="price"> <span>price : </span> $250,000/- </div>
                 <p>
                     2021 -
                     Automatic -
-                    60k miles
+                    102,086 miles
                 </p>
                 <a href="#" class="btn">check out</a>
             </div>
@@ -389,12 +389,12 @@
         <div class="box column gray car sportsCar">
             <img src="image/cars/17.png" alt="">
             <div class="content">
-                <h3>new model</h3>
-                <div class="price"> <span>price : </span> $62,000/- </div>
+                <h3>Chevrolet Camaro</h3>
+                <div class="price"> <span>price : </span> $39,499/- </div>
                 <p>
-                    2021 -
+                    2018 -
                     Automatic -
-                    60k miles
+                    25,185 miles
                 </p>
                 <a href="#" class="btn">check out</a>
             </div>
@@ -403,12 +403,12 @@
         <div class="box column white truck">
             <img src="image/cars/18.png" alt="">
             <div class="content">
-                <h3>new model</h3>
-                <div class="price"> <span>price : </span> $62,000/- </div>
+                <h3>Toyota Tundra</h3>
+                <div class="price"> <span>price : </span> $9,021/- </div>
                 <p>
-                    2021 -
+                    2009 -
                     Automatic -
-                    60k miles
+                    277,114 miles
                 </p>
                 <a href="#" class="btn">check out</a>
             </div>
