--- a/explore.html
+++ b/explore.html
@@ -451,7 +451,7 @@
 
     </div>
 
-    <div class="credit">Theme:  Develop a website for a used car lot</div>
+    <div class="theme">Theme:  Develop a website for a used car lot</div>
 
 </section>
 
