unique info (main page)

--- a/index.html
+++ b/index.html
@@ -101,26 +101,12 @@
             <div class="swiper-slide box">
                 <img src="image/cars/1.png" alt="">
                 <div class="content">
-                    <h3>new model</h3>
-                    <div class="price"> <span>price : </span> $62,000/- </div>
+                    <h3>Kia Sportage</h3>
+                    <div class="price"> <span>price : </span> $24,000/- </div>
                     <p>
-                        2021 -
+                        2022 -
                         Automatic -
-                        60k Miles
-                    </p>
-                    <a href="#" class="btn">check out</a>
-                </div>
-            </div>
-
-            <div class="swiper-slide box">
-                <img src="image/cars/2.png" alt="">
-                <div class="content">
-                    <h3>new model</h3>
-                    <div class="price"> <span>price : </span> $62,000/- </div>
-                    <p>
-                        2021 -
-                        Automatic -
-                        60k Miles
+                        109,280 miles
                     </p>
                     <a href="#" class="btn">check out</a>
                 </div>
@@ -129,26 +115,12 @@
             <div class="swiper-slide box">
                 <img src="image/cars/3.png" alt="">
                 <div class="content">
-                    <h3>new model</h3>
-                    <div class="price"> <span>price : </span> $62,000/- </div>
+                    <h3>Chevrolet Equinox Premier</h3>
+                    <div class="price"> <span>price : </span> $27,299/- </div>
                     <p>
-                        2021 -
+                        2020 -
                         Automatic -
-                        60k Miles
-                    </p>
-                    <a href="#" class="btn">check out</a>
-                </div>
-            </div>
-
-            <div class="swiper-slide box">
-                <img src="image/cars/4.png" alt="">
-                <div class="content">
-                    <h3>new model</h3>
-                    <div class="price"> <span>price : </span> $62,000/- </div>
-                    <p>
-                        2021 -
-                        Automatic -
-                        60k Miles
+                        13,000 miles
                     </p>
                     <a href="#" class="btn">check out</a>
                 </div>
@@ -157,12 +129,12 @@
             <div class="swiper-slide box">
                 <img src="image/cars/5.png" alt="">
                 <div class="content">
-                    <h3>new model</h3>
-                    <div class="price"> <span>price : </span> $62,000/- </div>
+                    <h3>Ford Focus ST</h3>
+                    <div class="price"> <span>price : </span> $15,497/- </div>
                     <p>
-                        2021 -
+                        2017 -
                         Automatic -
-                        60k Miles
+                        93,000 miles
                     </p>
                     <a href="#" class="btn">check out</a>
                 </div>
@@ -171,12 +143,26 @@
             <div class="swiper-slide box">
                 <img src="image/cars/6.png" alt="">
                 <div class="content">
-                    <h3>new model</h3>
-                    <div class="price"> <span>price : </span> $62,000/- </div>
+                    <h3>Kia Sportage</h3>
+                    <div class="price"> <span>price : </span> $23,909/- </div>
                     <p>
                         2021 -
                         Automatic -
-                        60k Miles
+                        20,000 miles
+                    </p>
+                    <a href="#" class="btn">check out</a>
+                </div>
+            </div>
+
+            <div class="swiper-slide box">
+                <img src="image/cars/9.png" alt="">
+                <div class="content">
+                    <h3>Audi e-tron</h3>
+                    <div class="price"> <span>price : </span> $62,000/- </div>
+                    <p>
+                        2019 -
+                        Automatic -
+                        8,670 miles
                     </p>
                     <a href="#" class="btn">check out</a>
                 </div>
